test/parsing/errors/cannotAttachPragmas.compopts
--detailed-errors # cannotAttachPragmas-detailed.good
--no-detailed-errors # cannotAttachPragmas-brief.good
